--- a/BlueTooth/Pet/PetViewController.xib
+++ b/BlueTooth/Pet/PetViewController.xib
@@ -11,6 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PetViewController">
             <connections>
+                <outlet property="RefrigeratorView" destination="caS-2P-F96" id="bLg-gV-JIU"/>
+                <outlet property="bigImageView" destination="41l-JC-h4U" id="Ykg-e1-Oih"/>
+                <outlet property="eatBtn" destination="2k8-7c-P1G" id="Zlo-Px-73C"/>
+                <outlet property="locationView" destination="WQo-XX-7zs" id="yOc-9l-Uh9"/>
+                <outlet property="toastView" destination="Y73-9U-PQp" id="dod-Bg-PUF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -29,25 +34,126 @@
                         <constraint firstAttribute="height" constant="40" id="UAh-Rn-DDk"/>
                     </constraints>
                     <state key="normal" backgroundImage="grayCircle"/>
+                    <connections>
+                        <action selector="leftBtnAction:" destination="-1" eventType="touchUpInside" id="oUZ-Lp-g8r"/>
+                    </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zIh-ug-dd2">
-                    <rect key="frame" x="298" y="20" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mPT-1v-1XQ">
+                    <rect key="frame" x="315" y="40" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="KYP-cZ-klT"/>
+                        <constraint firstAttribute="height" constant="40" id="fYS-ig-vaF"/>
+                    </constraints>
+                    <state key="normal" backgroundImage="grayCircle"/>
+                    <connections>
+                        <action selector="rightBtnAction:" destination="-1" eventType="touchUpInside" id="9gZ-sw-PK6"/>
+                    </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="提示气泡01" translatesAutoresizingMaskIntoConstraints="NO" id="Y73-9U-PQp">
+                    <rect key="frame" x="116.5" y="205" width="142" height="70"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="原始形态" translatesAutoresizingMaskIntoConstraints="NO" id="41l-JC-h4U">
+                    <rect key="frame" x="109.5" y="289" width="155" height="191"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2k8-7c-P1G">
+                    <rect key="frame" x="141" y="530" width="92" height="92"/>
+                    <state key="normal" backgroundImage="喂养按钮"/>
+                    <connections>
+                        <action selector="eatBtnAction:" destination="-1" eventType="touchUpInside" id="ASN-8a-ngc"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WQo-XX-7zs">
+                    <rect key="frame" x="69" y="544.5" width="40" height="63"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grayCircle" translatesAutoresizingMaskIntoConstraints="NO" id="opr-Ye-09L">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="q9V-vE-Zci"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地图" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UoB-rS-fmO">
+                            <rect key="frame" x="0.0" y="51" width="40" height="12"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="12" id="0iL-Mg-cYw"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                            <color key="textColor" red="0.39607843139999999" green="0.42745098040000001" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="UoB-rS-fmO" firstAttribute="leading" secondItem="WQo-XX-7zs" secondAttribute="leading" id="4Y7-YZ-WR1"/>
+                        <constraint firstItem="opr-Ye-09L" firstAttribute="top" secondItem="WQo-XX-7zs" secondAttribute="top" id="AUS-c4-Rcl"/>
+                        <constraint firstAttribute="height" constant="63" id="KDK-aV-ASc"/>
+                        <constraint firstAttribute="trailing" secondItem="UoB-rS-fmO" secondAttribute="trailing" id="OxH-1u-zDj"/>
+                        <constraint firstAttribute="trailing" secondItem="opr-Ye-09L" secondAttribute="trailing" id="S4v-wQ-Qbu"/>
+                        <constraint firstAttribute="width" constant="40" id="TYZ-2y-zyG"/>
+                        <constraint firstItem="opr-Ye-09L" firstAttribute="leading" secondItem="WQo-XX-7zs" secondAttribute="leading" id="akW-Nh-oJ4"/>
+                        <constraint firstAttribute="bottom" secondItem="UoB-rS-fmO" secondAttribute="bottom" id="nDG-Wp-OaC"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="caS-2P-F96">
+                    <rect key="frame" x="265" y="545" width="40" height="63"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grayCircle" translatesAutoresizingMaskIntoConstraints="NO" id="u8W-g1-bCD">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="mJi-Fh-Erw"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="冰箱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NcC-T6-ixO">
+                            <rect key="frame" x="0.0" y="51" width="40" height="12"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="12" id="Bnp-WV-WVW"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                            <color key="textColor" red="0.39607843139999999" green="0.42745098040000001" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="6gb-4h-cqr"/>
+                        <constraint firstAttribute="trailing" secondItem="NcC-T6-ixO" secondAttribute="trailing" id="Bd1-vr-l4I"/>
+                        <constraint firstAttribute="height" constant="63" id="MEf-u9-P1a"/>
+                        <constraint firstItem="u8W-g1-bCD" firstAttribute="leading" secondItem="caS-2P-F96" secondAttribute="leading" id="hc1-ha-u6f"/>
+                        <constraint firstItem="NcC-T6-ixO" firstAttribute="leading" secondItem="caS-2P-F96" secondAttribute="leading" id="nVs-Ot-8gN"/>
+                        <constraint firstItem="u8W-g1-bCD" firstAttribute="top" secondItem="caS-2P-F96" secondAttribute="top" id="ogu-rm-sVj"/>
+                        <constraint firstAttribute="trailing" secondItem="u8W-g1-bCD" secondAttribute="trailing" id="xaY-BR-iya"/>
+                        <constraint firstAttribute="bottom" secondItem="NcC-T6-ixO" secondAttribute="bottom" id="yWE-ag-zKZ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="0Dv-au-gMa" secondAttribute="trailing" id="3JC-xC-E5B"/>
+                <constraint firstItem="2k8-7c-P1G" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="4in-Zc-N2n"/>
+                <constraint firstItem="Y73-9U-PQp" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="531-Ok-SJS"/>
+                <constraint firstItem="41l-JC-h4U" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="6VT-DS-Mfq"/>
+                <constraint firstItem="caS-2P-F96" firstAttribute="leading" secondItem="2k8-7c-P1G" secondAttribute="trailing" constant="32" id="8DI-W2-6ng"/>
                 <constraint firstItem="i6A-yk-Mjk" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="C1v-td-6gM"/>
+                <constraint firstAttribute="bottom" secondItem="2k8-7c-P1G" secondAttribute="bottom" constant="45" id="FrW-Zm-QUg"/>
+                <constraint firstItem="caS-2P-F96" firstAttribute="centerY" secondItem="2k8-7c-P1G" secondAttribute="centerY" id="IVi-RQ-1Ff"/>
+                <constraint firstAttribute="trailing" secondItem="mPT-1v-1XQ" secondAttribute="trailing" constant="20" id="OJP-x2-Qdy"/>
                 <constraint firstItem="i6A-yk-Mjk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="OWq-2u-bP0"/>
                 <constraint firstAttribute="bottom" secondItem="0Dv-au-gMa" secondAttribute="bottom" id="TGR-YN-5hU"/>
+                <constraint firstItem="mPT-1v-1XQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="TJk-at-sFl"/>
+                <constraint firstItem="2k8-7c-P1G" firstAttribute="top" secondItem="41l-JC-h4U" secondAttribute="bottom" constant="50" id="cMM-7i-e8Y"/>
                 <constraint firstItem="0Dv-au-gMa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ghp-pV-wKH"/>
+                <constraint firstItem="WQo-XX-7zs" firstAttribute="centerY" secondItem="2k8-7c-P1G" secondAttribute="centerY" id="jMg-td-8BO"/>
+                <constraint firstItem="2k8-7c-P1G" firstAttribute="leading" secondItem="WQo-XX-7zs" secondAttribute="trailing" constant="32" id="mBa-U6-Kdn"/>
                 <constraint firstItem="0Dv-au-gMa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uHK-B4-mjo"/>
+                <constraint firstItem="Y73-9U-PQp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="205" id="xaZ-0A-0KJ"/>
             </constraints>
+            <point key="canvasLocation" x="33.5" y="108.5"/>
         </view>
     </objects>
     <resources>
         <image name="0-背景" width="187" height="333"/>
         <image name="grayCircle" width="19" height="19"/>
+        <image name="原始形态" width="155" height="191"/>
+        <image name="喂养按钮" width="92" height="92"/>
+        <image name="提示气泡01" width="142" height="70"/>
     </resources>
 </document>
