--- a/BlueTooth/Login/LoginViewController.xib
+++ b/BlueTooth/Login/LoginViewController.xib
@@ -26,7 +26,7 @@
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kUJ-ik-wIW">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <color key="backgroundColor" red="1" green="1" blue="0.34509803919999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CHZ-cV-6kq">
                     <rect key="frame" x="30" y="123" width="314" height="420"/>
@@ -217,7 +217,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="CHZ-cV-6kq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="3H0-RS-rLF"/>
                 <constraint firstItem="CHZ-cV-6kq" firstAttribute="top" secondItem="wui-dp-juf" secondAttribute="bottom" constant="-46" id="D5p-jg-K9L"/>
