--- a/BlueTooth/Pet/PetViewController.xib
+++ b/BlueTooth/Pet/PetViewController.xib
@@ -13,15 +13,19 @@
             <connections>
                 <outlet property="RefrigeratorView" destination="caS-2P-F96" id="bLg-gV-JIU"/>
                 <outlet property="backImageView" destination="0Dv-au-gMa" id="KXE-j1-EcE"/>
+                <outlet property="bigImageBottom" destination="cMM-7i-e8Y" id="uPv-uQ-MiS"/>
                 <outlet property="bigImageView" destination="41l-JC-h4U" id="Ykg-e1-Oih"/>
                 <outlet property="eatBtn" destination="2k8-7c-P1G" id="Zlo-Px-73C"/>
-                <outlet property="eatTopImage" destination="XeR-he-GUI" id="COJ-eR-K45"/>
-                <outlet property="eatView" destination="eVX-SU-Wg5" id="I26-Pl-iac"/>
+                <outlet property="eatBtnBottom" destination="FrW-Zm-QUg" id="wti-hT-4ec"/>
                 <outlet property="energyView" destination="XOC-82-6IN" id="hho-da-AI3"/>
-                <outlet property="foodImageView" destination="3qp-pG-4iM" id="1oL-rk-ZtM"/>
+                <outlet property="finishFoodImage" destination="L78-M5-4km" id="hZW-PQ-Wdi"/>
+                <outlet property="finishFoodTop" destination="Nng-pS-Vd8" id="oOn-LT-Wru"/>
                 <outlet property="hungerImageView" destination="kaH-8O-0sM" id="OCT-VN-3MV"/>
+                <outlet property="imageView" destination="AJE-G9-HBa" id="MVK-IV-JzS"/>
+                <outlet property="leftTopBtn" destination="i6A-yk-Mjk" id="r2k-Gk-hao"/>
                 <outlet property="locationView" destination="WQo-XX-7zs" id="yOc-9l-Uh9"/>
                 <outlet property="toastView" destination="Y73-9U-PQp" id="dod-Bg-PUF"/>
+                <outlet property="toastViewTop" destination="xaZ-0A-0KJ" id="YEK-Zi-XFm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -144,31 +148,12 @@
                         <constraint firstAttribute="bottom" secondItem="NcC-T6-ixO" secondAttribute="bottom" id="yWE-ag-zKZ"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eVX-SU-Wg5">
-                    <rect key="frame" x="94" y="451" width="226" height="285"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="拖动提示气泡" translatesAutoresizingMaskIntoConstraints="NO" id="XeR-he-GUI">
-                            <rect key="frame" x="42" y="0.0" width="142" height="70"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0-巧克力纸杯蛋糕" translatesAutoresizingMaskIntoConstraints="NO" id="3qp-pG-4iM">
-                            <rect key="frame" x="17" y="70" width="192" height="172"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="手" translatesAutoresizingMaskIntoConstraints="NO" id="gKO-X6-axa">
-                            <rect key="frame" x="0.0" y="164" width="226" height="251"/>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="gKO-X6-axa" firstAttribute="centerX" secondItem="eVX-SU-Wg5" secondAttribute="centerX" id="8dz-dy-zOE"/>
-                        <constraint firstItem="XeR-he-GUI" firstAttribute="top" secondItem="eVX-SU-Wg5" secondAttribute="top" id="GSQ-3x-KgN"/>
-                        <constraint firstAttribute="width" constant="226" id="GkB-Bg-kNS"/>
-                        <constraint firstItem="3qp-pG-4iM" firstAttribute="centerX" secondItem="eVX-SU-Wg5" secondAttribute="centerX" id="Lca-NW-oGO"/>
-                        <constraint firstAttribute="bottom" secondItem="gKO-X6-axa" secondAttribute="bottom" constant="-130" id="T41-TJ-CIP"/>
-                        <constraint firstAttribute="height" constant="285" id="YSe-kq-otf"/>
-                        <constraint firstItem="3qp-pG-4iM" firstAttribute="top" secondItem="XeR-he-GUI" secondAttribute="bottom" id="hE9-aB-2cq"/>
-                        <constraint firstItem="XeR-he-GUI" firstAttribute="centerX" secondItem="eVX-SU-Wg5" secondAttribute="centerX" id="rzq-bu-ww3"/>
-                    </constraints>
-                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="合成 1_00000" translatesAutoresizingMaskIntoConstraints="NO" id="AJE-G9-HBa">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0-旋转飞起" translatesAutoresizingMaskIntoConstraints="NO" id="L78-M5-4km">
+                    <rect key="frame" x="163.66666666666666" y="418" width="87" height="108"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -177,20 +162,24 @@
                 <constraint firstItem="Y73-9U-PQp" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="531-Ok-SJS"/>
                 <constraint firstItem="41l-JC-h4U" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="6VT-DS-Mfq"/>
                 <constraint firstItem="caS-2P-F96" firstAttribute="leading" secondItem="2k8-7c-P1G" secondAttribute="trailing" constant="32" id="8DI-W2-6ng"/>
+                <constraint firstAttribute="trailing" secondItem="AJE-G9-HBa" secondAttribute="trailing" id="8YE-ww-4TD"/>
                 <constraint firstItem="kaH-8O-0sM" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="AMv-20-hoj"/>
                 <constraint firstItem="i6A-yk-Mjk" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="C1v-td-6gM"/>
                 <constraint firstAttribute="bottom" secondItem="2k8-7c-P1G" secondAttribute="bottom" constant="45" id="FrW-Zm-QUg"/>
                 <constraint firstItem="caS-2P-F96" firstAttribute="centerY" secondItem="2k8-7c-P1G" secondAttribute="centerY" id="IVi-RQ-1Ff"/>
+                <constraint firstItem="L78-M5-4km" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="418" id="Nng-pS-Vd8"/>
                 <constraint firstItem="i6A-yk-Mjk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="OWq-2u-bP0"/>
+                <constraint firstItem="L78-M5-4km" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="PbT-xp-2TB"/>
                 <constraint firstItem="2k8-7c-P1G" firstAttribute="top" secondItem="kaH-8O-0sM" secondAttribute="bottom" constant="5" id="R85-bd-s6W"/>
                 <constraint firstAttribute="bottom" secondItem="0Dv-au-gMa" secondAttribute="bottom" id="TGR-YN-5hU"/>
-                <constraint firstAttribute="bottom" secondItem="eVX-SU-Wg5" secondAttribute="bottom" id="bbP-c0-Qiz"/>
+                <constraint firstItem="AJE-G9-HBa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="YyV-vS-dao"/>
                 <constraint firstItem="2k8-7c-P1G" firstAttribute="top" secondItem="41l-JC-h4U" secondAttribute="bottom" constant="50" id="cMM-7i-e8Y"/>
+                <constraint firstAttribute="bottom" secondItem="AJE-G9-HBa" secondAttribute="bottom" id="eKy-zg-0V4"/>
                 <constraint firstItem="0Dv-au-gMa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ghp-pV-wKH"/>
                 <constraint firstItem="XOC-82-6IN" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="hgN-99-fUr"/>
-                <constraint firstItem="eVX-SU-Wg5" firstAttribute="centerX" secondItem="0Dv-au-gMa" secondAttribute="centerX" id="iDK-ji-ReU"/>
                 <constraint firstItem="WQo-XX-7zs" firstAttribute="centerY" secondItem="2k8-7c-P1G" secondAttribute="centerY" id="jMg-td-8BO"/>
                 <constraint firstItem="2k8-7c-P1G" firstAttribute="leading" secondItem="WQo-XX-7zs" secondAttribute="trailing" constant="32" id="mBa-U6-Kdn"/>
+                <constraint firstItem="AJE-G9-HBa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="qZM-Wb-WOD"/>
                 <constraint firstItem="XOC-82-6IN" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="122" id="scz-7Q-ZoQ"/>
                 <constraint firstItem="0Dv-au-gMa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uHK-B4-mjo"/>
                 <constraint firstItem="Y73-9U-PQp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="205" id="xaZ-0A-0KJ"/>
@@ -199,15 +188,14 @@
         </view>
     </objects>
     <resources>
-        <image name="0-巧克力纸杯蛋糕" width="192" height="172"/>
+        <image name="0-旋转飞起" width="87" height="108"/>
         <image name="0-背景" width="375" height="667"/>
         <image name="冰箱icon" width="42" height="42"/>
         <image name="原始形态" width="155" height="191"/>
         <image name="发光特效" width="372" height="326"/>
+        <image name="合成 1_00000" width="750" height="1334"/>
         <image name="喂养按钮" width="92" height="92"/>
         <image name="地图icon" width="42" height="42"/>
-        <image name="手" width="226" height="251"/>
-        <image name="拖动提示气泡" width="142" height="70"/>
         <image name="提示气泡01" width="142" height="70"/>
         <image name="获得能量气泡" width="87" height="50"/>
         <image name="菜单icon" width="80" height="82"/>
